// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1 expense 1`] = `
<div>
  <h3>
    Viewing 1 expense totalling $0.10
  </h3>
</div>
`;

exports[`should render 2 expenses 1`] = `
<div>
  <h3>
    Viewing 2 expenses totalling $0.20
  </h3>
</div>
`;
